[package]
name = "tasker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.2", features = ["default"]}
chrono = { version = "0.4.31", features = ["serde"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = {version = "1.0.108"}
tokio = {version = "1.34.0", features = ["full"]}
tower-http = {version = "0.5.0", features = ["cors", "trace"]}
uuid = {version = "1.6.1", features = ["v4", "serde"]}
tracing = { version = "0.1.40", features = ["default"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
sqlx = {version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"]}
toml = { version = "0.8.8", features = ["default"] }